Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2158

ats_is_ip_nonroutable does not properly handle link local addresser nor v6 addresses

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 4.0.1
    • 4.1.2
    • None
    • None

    Description

      We need to augment ats_is_ip_nonroutable so that it also returns that link local addresses are non-routable and also handle v6 private and link local addresses.

      Attachments

        1. TS-2158_v2.patch
          1 kB
          Phil Sorber
        2. TS-2158.patch
          1 kB
          Phil Sorber

        Activity

          People

            psudaemon Phil Sorber
            psudaemon Phil Sorber
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: